## NEWS to package MKinfer
###############################################################################

###########################################################
## Version 0.6
###########################################################
- removed an unnecessary print in function binomDiffCI
- use lgamma instead of gamma to compute variance of SD (inside normCI)

###########################################################
## Version 0.5
###########################################################
- corrected bug in wilson method in binomDiffCI (alpha was not passed through)
  detected by Takuya Yanagida.
- attribute conf.level was not set in meanCI and sdCI.

###########################################################
## Version 0.4
###########################################################
- changed return value of imputeSD
- added volcano plot

###########################################################
## Version 0.3
###########################################################
- corrected minor bug for wald-cc in binomCI and binomDiffCI
- corrected minor bug in case of bootstrap confidence intervals (conf.level 
  was not passed through)
- introduced one-sided confidence intervals in all *CI functions
- added references to description and vignette
- added function rm.oneway.test to compute parametric and non-parametric
  one-way ANOVA with repeated measures
  

###########################################################
## Version 0.2
###########################################################
- Added new function binomDiffCI for computing confidence intervals for
  the difference of two binomial proportions.
- Changed import form MKmisc to MKdescr
- Moved function pairwise.fun from MKmisc/MKdescr to MKinfer
- Added bootstrap intervals to functions binomCI and binomDiffCI
- Added bootstrap intervals to function normCI
- Added functions meanCI and sdCI calling function normCI
- Added bootstrap intervals to function normDiffCI