@@ -1,6 +1,6 @@
 Package: MKinfer
 Version: 0.6
-Date: 2020-09-04
+Date: 2020-10-21
 Title: Inferential Statistics
 Authors@R: person("Matthias", "Kohl", role = c("aut", "cre"),
                   email = "Matthias.Kohl@stamats.de", 
